about.css
body {
  margin: 0px auto;
  font-size: 100%;
  overflow-y: scroll;
}

.grid-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: minmax(140px, 140px) auto 5%;
  min-height: 100vh;
}


.name {
  grid-column: 1/4;
  grid-row: 1;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
}

.name img {
  max-width: 30%;
  height: auto;
}

.nav {
  display: flex;
  text-align: right;
  grid-column: 3/4;
  grid-row: 1;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

a {
  margin: 3%;
  font-family: 'Roboto', sans-serif;
  color: silver;
  font-size: 100%;
  text-decoration: none;
}

.topnav:nth-child(1):hover {
  border-top: 2px solid #ff00a6;
  border-bottom: 2px solid #ff00a6;
  padding: 6px 0;
}

.topnav:nth-child(2):hover {
  border-top: 2px solid #ffd150;
  border-bottom: 2px solid #ffd150;
  padding: 6px 0;
}

.topnav:nth-child(3):hover {
  border-top: 2px solid #00d164;
  border-bottom: 2px solid #00d164;
  padding: 6px 0;
}

.topnav:nth-child(4):hover {
  border-top: 2px solid #0088f6;
  border-bottom: 2px solid #0088f6;
  padding: 6px 0;
}

.topnav:nth-child(5):hover {
  border-top: 2px solid #b353e8;
  border-bottom: 2px solid #b353e8;
  padding: 6px 0;
}



.aside {
  grid-column: 1/2;
  display: flex;
  align-items: center;
}


.disc-container {
  margin: 20px auto;
  position: relative;

}

.disc-container:hover .disc, .disc-container.hover .disc {
  transform: rotateY(180deg);
}

.disc-container, .front, .back {
  width: 300px;
  height: 300px;
}


.disc {
	transition: 0.6s;
	transform-style: preserve-3d;
	position: relative;

}

.front, .back {
	backface-visibility: hidden;
  display:table;
  text-align: center;
  border-radius: 100%;
  background-image: linear-gradient(to bottom, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
  padding: 4px;
  position:absolute;
}


.front {
	z-index: 2;
	transform: rotateY(0deg);
}

.back {
	transform: rotateY(180deg);
  color: #ffffff;
}


.paragraph {
  grid-column: 2/4;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  max-width: 60vw;
  max-height: 50vh;
  flex-wrap: wrap;
}

.paragraph p {
  text-align: justify;
  font-family: 'Roboto', sans-serif;
  color: #414a4c;
  font-size: 13px;
  line-height: 1.5;
}


.images {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 80%;
  align-items: center;
}

.images img{
  width: auto;
  height: 40px;
  margin: 20px;
}

/* Scrollbar styles */
::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 7px;
}


::-webkit-scrollbar-thumb {
  border-radius: 4px;
  background-color: rgba(0,0,0,.5);
}


footer {
  grid-column: 2;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  margin: 6%;
}

i {
  padding: 1%;
  font-size: 200%;
  margin: 2%;
}

i:nth-child(1) {
  color: #ff3f7f;
}


i:nth-child(2) {
  color: #ffa64c;
}

i:nth-child(3) {
  color: #0088f6;
}

i:nth-child(4) {
  color: #9435C9;
}



mycolours {
color:#ff00a6;
color:#ff3f7f;
color:#ff755f;
color:#ffa64c;
color:#ffd150;
color:#00d164;
color:#008172;
color:#0088f6;
color:#0079ff;
color:#b353e8;
color:#9435C9;
}

.mobilenav {
  display: none;
}

.mobsnip {
  display: none;
}

@media only screen and (max-width: 800px) {
  .grid-container {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    flex-wrap: wrap;
    flex-direction: column;
    -webkit-overflow-scrolling: touch;
  }

    .mobilenav {
    display: inline-block;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    background: white;
    white-space: nowrap;
  }

  .paragraph {
      margin-bottom: 20%;
  }


    i {
      font-size: 150%;
    }

    .name img {
      max-width: 40%;
      height: auto;
  }

    .nav {
      display: none;
    }

    .mobsnip {
      display: flex;
      font-family: 'Roboto', sans-serif;
      color: #414a4c;
      font-size: 13px;
      line-height: 1.5;
      border: 25px solid white;
    }


    footer {
      display: none;
    }

    .paragraph {
      display: none;
    }
  }

